Source/CppCore/bindings/python/CppCoreWrapper.h

// ===========================================
// 基础数据类型定义
// ===========================================

typedef void* GridHandle;
typedef void* RungeKuttaSolverHandle;
typedef void* FiniteDifferenceSolverHandle;
typedef void* ParallelComputeEngineHandle;
typedef void* VectorizedOperationsHandle;
typedef void* DataExporterHandle;
typedef void* PerformanceProfilerHandle;
// 执行策略和性能配置
typedef struct {
    int execution_policy;     // 执行策略
    int num_threads;          // 线程数量
    int simd_type;           // SIMD类型
    int priority;            // 优先级
} PerformanceConfig;
/**
 * @brief 获取当前时间步长
 * @param solver 求解器句柄
 * @return 当前时间步长
 */
OCEANSIM_API double RungeKutta_GetTimeStep(RungeKuttaSolverHandle solver);
// ===========================================
// 有限差分求解器接口
// ===========================================

/**
 * @brief 创建有限差分求解器
 * @param grid_size 网格大小
 * @param spacing 网格间距
 * @return 有限差分求解器句柄
 */
OCEANSIM_API FiniteDifferenceSolverHandle FiniteDiff_Create(int grid_size, double spacing);
/**
 * @brief 销毁有限差分求解器
 * @param solver 求解器句柄
 */
OCEANSIM_API void FiniteDiff_Destroy(FiniteDifferenceSolverHandle solver);
/**
 * @brief 计算一阶导数
 * @param solver 求解器句柄
 * @param input 输入数据
 * @param output 输出导数（需预分配）
 * @param size 数据大小
 * @param direction 求导方向（0=x, 1=y, 2=z）
 */
OCEANSIM_API void FiniteDiff_ComputeFirstDerivative(FiniteDifferenceSolverHandle solver,
                                                    const double* input, double* output,
                                                    int size, int direction);
/**
 * @brief 计算二阶导数
 * @param solver 求解器句柄
 * @param input 输入数据
 * @param output 输出导数（需预分配）
 * @param size 数据大小
 * @param direction 求导方向
 */
OCEANSIM_API void FiniteDiff_ComputeSecondDerivative(FiniteDifferenceSolverHandle solver,
                                                     const double* input, double* output,
                                                     int size, int direction);
// ===========================================
// 向量化运算接口
// ===========================================

/**
 * @brief 创建向量化运算引擎
 * @param config 性能配置
 * @return 向量化运算句柄
 */
OCEANSIM_API VectorizedOperationsHandle VectorOps_Create(const PerformanceConfig* config);
/**
 * @brief 销毁向量化运算引擎
 * @param ops 向量化运算句柄
 */
OCEANSIM_API void VectorOps_Destroy(VectorizedOperationsHandle ops);
/**
 * @brief 向量加法：result = a + b
 * @param ops 向量化运算句柄
 * @param a 输入向量A
 * @param b 输入向量B
 * @param result 输出向量
 * @param size 向量大小
 */
OCEANSIM_API void VectorOps_Add(VectorizedOperationsHandle ops, const double* a, const double* b,
                                double* result, int size);
/**
 * @brief 向量减法：result = a - b
 * @param ops 向量化运算句柄
 * @param a 输入向量A
 * @param b 输入向量B
 * @param result 输出向量
 * @param size 向量大小
 */
OCEANSIM_API void VectorOps_Sub(VectorizedOperationsHandle ops, const double* a, const double* b,
                                double* result, int size);
/**
 * @brief 向量点积
 * @param ops 向量化运算句柄
 * @param a 输入向量A
 * @param b 输入向量B
 * @param size 向量大小
 * @return 点积结果
 */
OCEANSIM_API double VectorOps_DotProduct(VectorizedOperationsHandle ops, const double* a, const double* b, int size);
/**
 * @brief 向量范数
 * @param ops 向量化运算句柄
 * @param a 输入向量
 * @param size 向量大小
 * @return 范数值
 */
OCEANSIM_API double VectorOps_Norm(VectorizedOperationsHandle ops, const double* a, int size);
// ===========================================
// 并行计算引擎接口
// ===========================================

/**
 * @brief 创建并行计算引擎
 * @param config 性能配置
 * @return 并行计算引擎句柄
 */
OCEANSIM_API ParallelComputeEngineHandle ParallelEngine_Create(const PerformanceConfig* config);
/**
 * @brief 销毁并行计算引擎
 * @param engine 并行计算引擎句柄
 */
OCEANSIM_API void ParallelEngine_Destroy(ParallelComputeEngineHandle engine);
/**
 * @brief 设置线程数量
 * @param engine 并行计算引擎句柄
 * @param num_threads 线程数量
 */
OCEANSIM_API void ParallelEngine_SetThreadCount(ParallelComputeEngineHandle engine, int num_threads);
/**
 * @brief 获取线程数量
 * @param engine 并行计算引擎句柄
 * @return 当前线程数量
 */
OCEANSIM_API int ParallelEngine_GetThreadCount(ParallelComputeEngineHandle engine);
// ===========================================
// 数据导出器接口
// ===========================================

/**
 * @brief 创建数据导出器
 * @return 数据导出器句柄
 */
OCEANSIM_API DataExporterHandle DataExporter_Create(void);
/**
 * @brief 销毁数据导出器
 * @param exporter 数据导出器句柄
 */
OCEANSIM_API void DataExporter_Destroy(DataExporterHandle exporter);
/**
 * @brief 导出为NetCDF格式
 * @param exporter 数据导出器句柄
 * @param grid 网格句柄
 * @param filename 文件名
 * @return 导出是否成功（1=成功，0=失败）
 */
OCEANSIM_API int DataExporter_ExportToNetCDF(DataExporterHandle exporter, GridHandle grid, const char* filename);
/**
 * @brief 导出为VTK格式
 * @param exporter 数据导出器句柄
 * @param grid 网格句柄
 * @param filename 文件名
 * @return 导出是否成功（1=成功，0=失败）
 */
OCEANSIM_API int DataExporter_ExportToVTK(DataExporterHandle exporter, GridHandle grid, const char* filename);
// ===========================================
// 性能分析器接口
// ===========================================

/**
 * @brief 创建性能分析器
 * @return 性能分析器句柄
 */
OCEANSIM_API PerformanceProfilerHandle Profiler_Create(void);
/**
 * @brief 销毁性能分析器
 * @param profiler 性能分析器句柄
 */
OCEANSIM_API void Profiler_Destroy(PerformanceProfilerHandle profiler);
/**
 * @brief 开始计时
 * @param profiler 性能分析器句柄
 * @param section_name 计时段名称
 */
OCEANSIM_API void Profiler_StartTiming(PerformanceProfilerHandle profiler, const char* section_name);
/**
 * @brief 结束计时
 * @param profiler 性能分析器句柄
 * @param section_name 计时段名称
 */
OCEANSIM_API void Profiler_EndTiming(PerformanceProfilerHandle profiler, const char* section_name);
/**
 * @brief 获取计时结果
 * @param profiler 性能分析器句柄
 * @param section_name 计时段名称
 * @return 耗时（毫秒）
 */
OCEANSIM_API double Profiler_GetElapsedTime(PerformanceProfilerHandle profiler, const char* section_name);
/**
 * @brief 生成性能报告
 * @param profiler 性能分析器句柄
 * @param filename 报告文件名
 */
OCEANSIM_API void Profiler_GenerateReport(PerformanceProfilerHandle profiler, const char* filename);
// ===========================================
// 工具函数接口
// ===========================================

/**
 * @brief 获取库版本信息
 * @return 版本字符串
 */
OCEANSIM_API const char* OceanSim_GetVersion(void);
/**
 * @brief 初始化库
 * @return 初始化是否成功（1=成功，0=失败）
 */
OCEANSIM_API int OceanSim_Initialize(void);
/**
 * @brief 清理库资源
 */
OCEANSIM_API void OceanSim_Cleanup(void);
/**
 * @brief 设置日志级别
 * @param level 日志级别（0=Debug, 1=Info, 2=Warning, 3=Error）
 */
OCEANSIM_API void OceanSim_SetLogLevel(int level);