Source/CppCore/bindings/csharp/CppCoreInterop.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern double RungeKutta_GetTimeStep(IntPtr solver);

        // ===========================================
        // 有限差分求解器接口
        // ===========================================

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr FiniteDiff_Create(int gridSize, double spacing);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void FiniteDiff_Destroy(IntPtr solver);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void FiniteDiff_ComputeFirstDerivative(IntPtr solver, double[] input, 
            double[] output, int size, int direction);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void FiniteDiff_ComputeSecondDerivative(IntPtr solver, double[] input, 
            double[] output, int size, int direction);

        // ===========================================
        // 向量化运算接口
        // ===========================================

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr VectorOps_Create(ref PerformanceConfig config);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void VectorOps_Destroy(IntPtr ops);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void VectorOps_Add(IntPtr ops, double[] a, double[] b, double[] result, int size);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void VectorOps_Sub(IntPtr ops, double[] a, double[] b, double[] result, int size);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern double VectorOps_DotProduct(IntPtr ops, double[] a, double[] b, int size);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern double VectorOps_Norm(IntPtr ops, double[] a, int size);

        // ===========================================
        // 并行计算引擎接口
        // ===========================================

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ParallelEngine_Create(ref PerformanceConfig config);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ParallelEngine_Destroy(IntPtr engine);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ParallelEngine_SetThreadCount(IntPtr engine, int numThreads);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ParallelEngine_GetThreadCount(IntPtr engine);

        // ===========================================
        // 数据导出器接口
        // ===========================================

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr DataExporter_Create();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void DataExporter_Destroy(IntPtr exporter);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int DataExporter_ExportToNetCDF(IntPtr exporter, IntPtr grid, 
            [MarshalAs(UnmanagedType.LPStr)] string filename);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int DataExporter_ExportToVTK(IntPtr exporter, IntPtr grid, 
            [MarshalAs(UnmanagedType.LPStr)] string filename);

        // ===========================================
        // 性能分析器接口
        // ===========================================

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Profiler_Create();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Profiler_Destroy(IntPtr profiler);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Profiler_StartTiming(IntPtr profiler, [MarshalAs(UnmanagedType.LPStr)] string sectionName);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Profiler_EndTiming(IntPtr profiler, [MarshalAs(UnmanagedType.LPStr)] string sectionName);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern double Profiler_GetElapsedTime(IntPtr profiler, [MarshalAs(UnmanagedType.LPStr)] string sectionName);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Profiler_GenerateReport(IntPtr profiler, [MarshalAs(UnmanagedType.LPStr)] string filename);

        // ===========================================
        // 工具函数接口
        // ===========================================

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr OceanSim_GetVersion();
        
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void OceanSim_FreeString(IntPtr ptr);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int OceanSim_Initialize();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void OceanSim_Cleanup();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void OceanSim_SetLogLevel(int level);
    }

    // ===========================================
    // 安全包装器基类
    // ===========================================

    /// <summary>
    /// 原生资源安全包装器基类
    /// </summary>
    public abstract class SafeNativeWrapper : IDisposable
    {
        protected IntPtr _handle;
        protected bool _disposed = false;

        protected SafeNativeWrapper(IntPtr handle)
        {
            _handle = handle;
        }

        /// <summary>
        /// 检查句柄是否有效
        /// </summary>
        public bool IsValid => _handle != IntPtr.Zero && !_disposed;

        /// <summary>
        /// 获取原生句柄
        /// </summary>
        public IntPtr Handle
        {
            get
            {
                ThrowIfDisposed();
                return _handle;
            }
        }

        /// <summary>
        /// 检查是否已释放，如果是则抛出异常
        /// </summary>
        protected void ThrowIfDisposed()
        {
            if (_disposed)
                throw new ObjectDisposedException(GetType().Name);
        }

        /// <summary>
        /// 释放原生资源
        /// </summary>
        protected abstract void ReleaseNativeResource();

        /// <summary>
        /// 实现IDisposable接口
        /// </summary>
        public void Dispose()
        {
            Dispose(true);
            GC.SuppressFinalize(this);
        }

        /// <summary>
        /// 保护的Dispose方法
        /// </summary>
        protected virtual void Dispose(bool disposing)
        {
            if (!_disposed)
            {
                if (_handle != IntPtr.Zero)
                {
                    ReleaseNativeResource();
                    _handle = IntPtr.Zero;
                }
                _disposed = true;
            }
        }

        /// <summary>
        /// 析构函数
        /// </summary>
        ~SafeNativeWrapper()
        {
            Dispose(false);
        }
    }
}